fix(cors): update CORS configuration to allow localhost and 127.0.0.1 patterns